apps/harbor/resources/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - core.harbor.v34l.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: harbor
          port: 80
